force-app/main/default/objects/Project_Roadmap_Request__c/Project_Roadmap_Request__c.object-meta.xml
<CustomObject>
    <description>Project Roadmap Requests submitted through the SFDC Governance Committee</description>
    <label>Project Roadmap Request</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Roadmap Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>