force-app/main/default/objects/Project_Roadmap_Request__c/fields/Funding_Comments__c.field-meta.xml
<CustomField>
    <fullName>Funding_Comments__c</fullName>
    <label>Funding Comments</label>
    <type>TextArea</type>
</CustomField>