force-app/main/default/objects/Project_Roadmap_Request__c/fields/Governance_Committee_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Governance_Committee_Approval_Status__c</fullName>
    <label>Governance Committee Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Issue Raised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>