force-app/main/default/objects/Project_Roadmap_Request__c/fields/Governance_Committee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Governance_Committee_Notes__c</fullName>
    <label>Governance Committee Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>