force-app/main/default/objects/Project_Roadmap_Request__c/fields/Project_Health_Flag__c.field-meta.xml
<CustomField>
    <fullName>Project_Health_Flag__c</fullName>
    <formula>IF( 
ISPICKVAL( Project_Health__c , &quot;Red - Significant Obstacles or Problems&quot;), IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Red&quot;), 
IF(
ISPICKVAL( Project_Health__c , &quot;Yellow - Raise Concern&quot;), IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Yellow&quot;),
IF(
ISPICKVAL( Project_Health__c , &quot;Green - No Issues&quot;), IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Green&quot;), 


 &quot;&quot;)

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Health Flag</label>
    <type>Text</type>
</CustomField>