force-app/main/default/objects/Project_Roadmap_Request__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Project Status</label>
    <type>TextArea</type>
</CustomField>