force-app/main/default/objects/Project_Roadmap_Request__c/fields/Project_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Summary__c</fullName>
    <label>Project Summary</label>
    <type>TextArea</type>
</CustomField>