force-app/main/default/objects/Project_Roadmap_Request__c/fields/Sustaining_Resource_Comments__c.field-meta.xml
<CustomField>
    <fullName>Sustaining_Resource_Comments__c</fullName>
    <label>Sustaining Resource Comments</label>
    <type>TextArea</type>
</CustomField>