force-app/main/default/objects/Project_Roadmap_Request__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Target_Completion_Date__c</columns>
    <columns>Estimated_Duration__c</columns>
    <columns>Project_Sponsor__c</columns>
    <columns>Division__c</columns>
    <columns>Roadmap_Status__c</columns>
    <columns>Project_Health__c</columns>
    <columns>Governance_Committee_Approval_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Roadmap_Status__c</field>
        <operation>equals</operation>
        <value>In Flight</value>
    </filters>
    <label>2. In Flight</label>
    <language>en_US</language>
</ListView>