force-app/main/default/objects/Project_Roadmap_Request__c/listViews/SUMMIT_Projects.listView-meta.xml
<ListView>
    <fullName>SUMMIT_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Sponsor__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Health_Flag__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>SUMMIT</value>
    </filters>
    <label>SUMMIT Projects</label>
</ListView>